Fixed hover state text overflow and refined text content

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -406,10 +406,23 @@ body {
 					font-size: 18px;
 					padding: 1em;
 					color: $dtu-white;
+					
+					@include bp-tablet {
+						padding-bottom: 0;
+					}
 				}
 
 				.description, a {
 					opacity: 0;
+					visibility: hidden;
+				}
+
+				a {
+
+					@include bp-tablet {
+						margin-top: auto;
+						margin-bottom: 1em;
+					}
 				}
 
 				img {
@@ -434,6 +447,7 @@ body {
 	
 					.description, a {
 						opacity: 1;
+						visibility: visible;
 					}
 				}
 			}
